--- a/ApiRemSly/ClientApp/public/index.html
+++ b/ApiRemSly/ClientApp/public/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ApiRemSly</title>
+    <title>RemSly Sport</title>
   </head>
   <body>
     <noscript>
